# dioxus-chat-app

./: .gitignore  Cargo.toml  Dioxus.toml  input.css
assets/: tailwind.css
src/: main.rs
