[package]
name = "chat-app"
version = "0.1.0"
authors = ["Nazelto <z15822621293@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.0", features = ["fullstack"] }
futures = "0.3.31"
gset = "1.1.0"
mongodb = { version = "3.2.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:mongodb", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# mongodb = ["dep:mongodb"]
# tokio = ["dep:tokio"]
